# metadata-kg

./: LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
data/: quickstart.ttl  quickstart_lineage.jsonld
docs/: ARCHITECTURE.md  DEPLOYMENT.md
evaluation/: RESULTS_LLM_DELTA.md  RESULTS_MULTI_CI.md  eval_dataset.py  eval_dataset_v2.py  results.json  results_llm.json  results_llm_ci_FINAL.json  results_llm_ci_run1.json  results_multi_ci.json  results_multi_model.json  run_evaluation.py  run_evaluation_llm.py  run_evaluation_llm_ci.py  run_evaluation_multi_model.py  run_evaluation_multi_model_ci.py  task1_log.txt
evaluation/gold_corpus/: gold_corpus_v2.csv  gold_corpus_v2.tsv  gold_corpus_v2.xlsx
examples/: custom_policy.yaml  quickstart.py  sample_dataset.json
irb/: 00_README.md  01_protocol.md  02_consent_form_EN.md  02_consent_form_TH.md  03_recruitment_email_EN.md  03_recruitment_email_TH.md  04_sus_questionnaire.md  05_nasa_tlx.md  06_annotation_rubric.md  07_hitl_grading_rubric.md  08_data_management_plan.md  09_risk_assessment.md  10_timeline_budget.md  IRB_FULL_PACKAGE.docx  IRB_FULL_PACKAGE.md
metadata_kg/: __init__.py
metadata_kg/api/: routes.py
metadata_kg/core/: kg_builder.py  llm_agent.py  metadata_schema.py
metadata_kg/governance/: lineage.py  policy.py  xai.py
metadata_kg/pipeline/: extract.py  ingest.py  lifecycle.py  validate.py
metadata_kg/search/: semantic_search.py
metadata_kg/tests/: benchmark.py  conftest.py  test_api.py  test_governance.py  test_kg_builder.py  test_lifecycle.py  test_llm_agent.py  test_search.py
