[project]
name = "metadata-kg"
version = "0.1.0"
description = "AI Metadata Automation with Knowledge Graphs (DCAT2/DCMI aligned, LLM-as-Agent, XAI, HITL)"
authors = [
    { name = "Wirapong Chansanam", email = "wirach@kku.ac.th" },
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["knowledge-graph", "metadata", "DCAT", "DCMI", "LLM", "RAG", "XAI"]

dependencies = [
    # Knowledge Graph
    "rdflib>=7.0.0",
    "networkx>=3.2",
    # LLM / Agent
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "anthropic>=0.40.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    # Search / Embeddings
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    # Utilities
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    # Streamlit UI
    "streamlit>=1.39.0",
    "streamlit-agraph>=0.0.45",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",
]
pdf = [
    "pypdf>=5.0.0",
    "pdfplumber>=0.11.0",
]

[project.scripts]
metadata-kg-api = "metadata_kg.api.routes:run"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["metadata_kg*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["metadata_kg/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
